--- a/package.json
+++ b/package.json
@@ -1,37 +1,52 @@
 {
-	"name": "",
-	"version": "1.0.0",
-	"description": "",
-	"main": "bundle.js",
-	"devDependencies": {
-		"@babel/core": "^7.6.0",
-		"@babel/polyfill": "^7.6.0",
-		"@babel/preset-env": "^7.6.0",
-		"babel-loader": "^8.0.6",
-		"css-loader": "^3.2.0",
-		"file-loader": "^4.2.0",
-		"html-webpack-plugin": "^3.2.0",
-		"node-sass": "^4.12.0",
-		"sass-loader": "^8.0.0",
-		"style-loader": "^1.0.0",
-		"webpack": "^4.39.3",
-		"webpack-cli": "^3.3.8",
-		"webpack-dev-server": "^3.8.0"
-	},
-	"dependencies": {
-		"matter-js": "^0.14.2",
-		"matterjs-ragdoll": "^1.0.7",
-		"pixi.js": "^5.3.3",
-		"radians": "^1.0.0",
-		"random": "^2.2.0"
-	},
-	"scripts": {
-		"compile": "webpack --production",
-		"dev:server": "webpack-dev-server --watch --development"
-	},
-	"babel": {
-		"presets": [
-			"@babel/preset-env"
-		]
-	}
+  "name": "matterjs-boilerplate",
+  "version": "1.0.0",
+  "description": "exports a boilerplate that run engine, render, runner setup with mouseconstraint for quickly setting up a project",
+  "main": "bundle.js",
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0"
+  },
+  "dependencies": {
+    "matter-js": "^0.14.2",
+    "matterjs-ragdoll": "^1.0.7",
+    "pixi.js": "^5.3.3",
+    "radians": "^1.0.0",
+    "random": "^2.2.0"
+  },
+  "scripts": {
+    "compile": "webpack --production",
+    "dev:server": "webpack-dev-server --watch --development"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ericposas/matter-applyingforce-removingbodies.git"
+  },
+  "keywords": [
+    "matterjs",
+    "matter-js",
+    "physics"
+  ],
+  "author": "ericposas",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ericposas/matter-applyingforce-removingbodies/issues"
+  },
+  "homepage": "https://github.com/ericposas/matter-applyingforce-removingbodies#readme"
 }
