--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "matterjs-boilerplate",
   "version": "1.0.0",
   "description": "exports a boilerplate that run engine, render, runner setup with mouseconstraint for quickly setting up a project",
-  "main": "bundle.js",
+  "main": "./src/MatterBoilerplate.js",
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/polyfill": "^7.6.0",
